# docx-charts

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
docx_charts/: __init__.py  chart.py  document.py
files/: PersonalizedReport_DraftV6.docx  PersonalizedReport_DraftV6_libreoffice.docx  new_template.docx
tests/: test_chart.py  test_document.py  test_temp.py
